--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ label {
 	height: 80vh;
 	display: grid;
 	justify-content: center;
-	gap: 10px;
+	gap: 16px;
 	grid-template-columns: repeat(8, 140px);
 	grid-template-rows: repeat(2, calc(140px / 2 * 3));
 }
@@ -107,6 +107,14 @@ label {
 
 .player2 {
 	color: #0000ff;
+}
+
+.player1-shadow {
+	box-shadow: #ff0000 0px 5px 15px;
+}
+
+.player2-shadow {
+	box-shadow: #0000ff 0px 5px 15px;
 }
 
 @keyframes drop-down {
