--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-* {
-	margin: 0;
+* {	margin: 0;
 	color: #fff;
 	font-family: "Inter", sans-serif;
 	font-weight: 400;
@@ -50,6 +49,7 @@ input::-webkit-inner-spin-button {
 
 input[type="number"] {
 	-moz-appearance: textfield;
+	appearance: textfield;
 }
 
 label {
